# activemq_pyspark_connector

./: .gitignore  README.md  pyproject.toml
src/activemq_pyspark/: __init__.py  datasource.py
src/activemq_pyspark_connector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
