# pyproject.toml

[build-system]
requires = ["setuptools>=74.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "activemq-pyspark-connector"
version = "1.0.1"
authors = [
  { name="Skyler Myers", email="myers_skyler@icloud.com" },
]
description = "A PySpark streaming data source for ActiveMQ."
readme = "README.md"
requires-python = ">=3.12.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "stomp.py>=8.2.0",
]

[project.urls]
"Homepage" = "https://github.com/skyler-myers-db/activemq-pyspark-connector"
"Bug Tracker" = "https://github.com/skyler-myers-db/activemq-pyspark-connector/issues"
